--- a/src/components/Navber.css
+++ b/src/components/Navber.css
@@ -50,7 +50,7 @@
   }
   
   .nav-links {
-    color: #fff;
+    color: #000000;
     display: flex;
     align-items: center;
     text-decoration: none;
