--- a/src/components/Context/Cart.css
+++ b/src/components/Context/Cart.css
@@ -1,19 +1,3 @@
-/* body {
-    font-family: 'Helvetica';
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-      'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-      sans-serif;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
-    background: hsl(0, 0%, 100%);
-    color: hsl(209, 61%, 16%);
-  } */
-  code {
-    font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-      monospace;
-  }
-
- 
   h1,
   h2,
   h3 {
@@ -36,16 +20,27 @@
     text-decoration: none;
   }
   .row {
+  width: 90%;
+  padding: 75px 0;
+  display: flex;
+  flex-wrap: wrap;
+  }
+
+  .row-1{
+    width: 75%;
     display: flex;
-    justify-content: flex-start;
-    padding: 12%;
+    align-items: center;
+    flex-wrap: nowrap;
+    padding: 40px;
+    margin: 48px;
+    box-sizing: border-box;
+    display: grid;
 
+  }
 
-}
   .row.center {
     align-items: center;
     margin:5px;
-   
   }
   .col-1 {
     flex: 2;
@@ -54,51 +49,46 @@
     flex: 3;
   }
   .block {
-    background-color: #e0e0e0;
-    padding: 1rem;
-    margin: 0.5rem;
-    border-radius: 0.5rem;
-    background: transparent;
-    border-color: transparent;
-    font-size: 1rem;
-    text-transform: capitalize;
-    letter-spacing: 1px;
-    padding: 0.375rem 0.75rem;
-    color:  hsl(360, 71%, 66%);
-    cursor: pointer;
-    transition: all 0.3s linear;
-    border-radius: 0.25rem;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+
 
   }
+
   .text-right {
     text-align: right;
   }
-  img.small {
-    max-height: 8rem;
+  img.image {
+    display: flex;
     object-fit: cover;
     height: 200px;
     width: 100%;
-    border: 0.25rem solid hsl(0, 0%, 100%);
+    border: 0.25rem solid hwb(0 100% 0% / 0.993);
     border-radius: 0.25rem;
-    display: block;
+    /* display: block; */
+
   }
+
   button {
     font-size: 0.8rem;
     padding: 0.2rem;
     margin: 0.1rem;
     border-radius: 0.5rem;
     border: 0.1rem #404040 solid;
-    background-color: #f0c040;
+    background-color: hsl(210, 22%, 49%);
     width: 100%;
     cursor: pointer;
+    margin-bottom: 10%;
   }
   button.add {
-    background-color: #40c0f0;
+    background-color: #06e2f1;
     width: 1.5rem;
   }
   button.remove {
-    background-color: #f04040;
+    background-color: #d8c6c6;
     width: 1.5rem;
+    
   }
   button.badge {
     background-color: #f04040;
