--- a/src/components/Main/Contact.css
+++ b/src/components/Main/Contact.css
@@ -1,42 +1,10 @@
-/* *{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-  
- 
-} */
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-}
-.contact form div {
-    display: flex;
-}
-  .contact textarea {
-    border: 1px solid rgba(3, 25, 26, 0.863);
-    height: 100px;
-    width: 500px;
-    border-radius: 5px;
-    margin-bottom: 20px;
+.contact {
+    min-height: 100vh;
+    width: 100vw;
+    padding: 100px 50px 50px 50px;
+    background: rgb(235 143 143);
+    color: rgba(255, 255, 255, 0.8);
   }
-  .contact input {
-    margin-bottom: 20px;
-    margin-right: 10px;
-  }
-  .contact form {
-    padding: 218px;
-  }
-  @media screen and (max-width: 768px) {
-    .contact h4 {
-    
-      width: 100px;
-      margin-bottom: 50px;
-      color: rgba(255, 255, 255, 0.664);
-    }
-    .contact form div {
-      flex-direction: column;
-    }
-    .contact input {
-      width: 100%;
-    }
+  .p{
+    color: black;
   }
