--- a/src/styles/shopping-cart.css
+++ b/src/styles/shopping-cart.css
@@ -1,3 +1,5 @@
+/* sideber menu for cart system cart e click korle jegula order korse seta side theke show korbe and ekhane theke checkout page e nie jabe  */
+
 .cart__container {
     position: fixed;
     top: 0;
@@ -22,4 +24,55 @@
     width: 100%;
     height: 60px;
     padding: 10px 20px;
+}
+
+.cart__close span i{
+    font-size: 1.1rem;
+    background: #212245;
+    padding: 5px;
+    border-radius: 50%;
+    -webkit-border-radius: 50%;
+    -moz-border-radius: 50%;
+    -ms-border-radius: 50%;
+    -o-border-radius: 50%;
+    color: #fff;
+    cursor: pointer;
+}
+
+.cart__item-list{
+    height: calc(100vh - 140px);
+    overflow-y: scroll;
+}
+
+.cart__bottom{
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    padding: 5px 20px;
+    width: 100%;
+    height: 80px;
+    background: #df2020;
+}
+
+.cart__bottom button{
+    border: none;
+    padding: 4px 20px;
+    border-radius: 5px;
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    -ms-border-radius: 5px;
+    -o-border-radius: 5px;
+    background: #fff;
+    color: #212245;
+}
+
+.cart__bottom button a {
+    color: #212245;
+    font-weight: 600;
+}
+
+@media only screen and (max-width: 576px) {
+    .cart {
+        width: 300px !important;
+    }
 }
