--- a/src/styles/shopping-cart.css
+++ b/src/styles/shopping-cart.css
@@ -9,7 +9,7 @@
     background: rgba(0, 0, 0, 0.639);
     z-index: 99999;
 }
-
+  
 .cart {
     position: absolute;
     top: 0;
@@ -19,32 +19,27 @@
     background: #fff;
     z-index: 999999;
 }
-
+  
 .cart__close {
     width: 100%;
     height: 60px;
     padding: 10px 20px;
 }
-
-.cart__close span i{
+  
+.cart__close span i {
     font-size: 1.1rem;
     background: #212245;
     padding: 5px;
     border-radius: 50%;
-    -webkit-border-radius: 50%;
-    -moz-border-radius: 50%;
-    -ms-border-radius: 50%;
-    -o-border-radius: 50%;
     color: #fff;
     cursor: pointer;
 }
-
-.cart__item-list{
+.cart__item-list {
     height: calc(100vh - 140px);
     overflow-y: scroll;
 }
-
-.cart__bottom{
+  
+.cart__bottom {
     position: absolute;
     bottom: 0;
     left: 0;
@@ -53,24 +48,30 @@
     height: 80px;
     background: #df2020;
 }
-
-.cart__bottom button{
+  
+.cart__bottom h6 {
+    font-size: 1rem;
+    color: #fff;
+}
+  
+.cart__bottom h6 span {
+    font-size: 1.3rem;
+    font-weight: 600;
+}
+  
+.cart__bottom button {
     border: none;
     padding: 4px 20px;
     border-radius: 5px;
-    -webkit-border-radius: 5px;
-    -moz-border-radius: 5px;
-    -ms-border-radius: 5px;
-    -o-border-radius: 5px;
     background: #fff;
     color: #212245;
 }
-
+  
 .cart__bottom button a {
     color: #212245;
     font-weight: 600;
 }
-
+  
 @media only screen and (max-width: 576px) {
     .cart {
         width: 300px !important;
