--- a/src/styles/checkout.css
+++ b/src/styles/checkout.css
@@ -5,16 +5,16 @@
 }
 
 .checkout__total{
-    border: top 1px solid #ddd ;
+    border-top: 1px solid #ddd ;
     padding-top: 30px;
 }
 
 
-@media only screen and(max-width:768px) {
-    .checkout__bill h6{
+@media only screen and (max-width: 768px) {
+    .checkout__bill h6 {
         font-size: 0.9rem;
     }
-    .checkout__bill{
+    .checkout__bill {
         margin-top: 40px;
     }
 }
