--- a/src/styles/cart-item.css
+++ b/src/styles/cart-item.css
@@ -16,11 +16,11 @@
 .cart__product-price span{
     font-size: 0.9rem;
     font-weight: 600;
-    color: #df2020;
+    color: #61dafb;
 }
 
 .increase__decrease-btn{
-    background: #fde4e4;
+    background: #61dafb63;
     padding: 2px 5px;
     border-radius: 5px;
     -webkit-border-radius: 5px;
@@ -42,7 +42,7 @@
 
 .cart__item {
     margin-bottom: 15px;
-    border-bottom: 1px solid #fde4e4;
+    border-bottom: 1px solid #61dafb63;
 }
 
 @media only screen and (max-width: 576px) {
