--- a/src/styles/footer.css
+++ b/src/styles/footer.css
@@ -1,7 +1,7 @@
 .footer {
     padding-top: 50px;
     padding-bottom: 30px;
-    background: #fde4e4;
+    background: #61dafb63;
   }
   
 .footer__logo img {
@@ -62,7 +62,7 @@
 }
 
 .newsletter span {
-  background: #df2020;
+  background: #61dafb;
   padding: 5px 30px;
   border-radius: 5px;
 }
@@ -77,14 +77,14 @@
 
 .social__links span i {
   padding: 5px;
-  background: #df2020;
+  background: #61dafb;
   color: #fff;
   border-radius: 50%;
 }
 
 .copyright__text {
   font-size: 0.8rem;
-  color: #df2020;
+  color: #61dafb;
 }
 
 @media only screen and (max-width: 992px) {
