--- a/src/styles/product-card.css
+++ b/src/styles/product-card.css
@@ -1,58 +1,131 @@
 .product__item {
-    border: 1px solid #fde4e4;
-    text-align: center;
-    padding: 30px;
-    cursor: pointer;
-    /* height: 100%; */
-
+  /* border: 1px solid #fde4e4;
+  text-align: center;
+  padding: 30px;
+  cursor: pointer; */
+  background: #ffffff;
+  border-radius: 10px;
+  cursor: pointer;
+  animation: animate 1s ease-in;
 }
+.product__item:hover {
+box-shadow: 5px 5px 10px -5px #61dafb;
+}
+
+/* .product__content{
+  text-align: center;
   
-  /* .product__content{
-    text-align: center;
-    
-  } */
-  .product__img {
-    margin-bottom: 20px;
-    transition: 0.4s;
+} */
+.product__img {
+  margin-bottom: 20px;
+  transition: 0.4s;
+  color: #fdfdfd;
+  text-align: center;
+}
+
+.product__img:hover {
+  transform: scale(1.1);
+  -webkit-transform: scale(1.1);
+  -moz-transform: scale(1.1);
+  -ms-transform: scale(1.1);
+  -o-transform: scale(1.1);
+}
+
+.product__content h5 a {
+  color: #61dafb;
+  font-size: 1rem;
+}
+
+.product__content h5 {
+  margin-bottom: 30px;
+}
+
+.product__price {
+  font-weight: 600;
+  font-size: 1.2rem;
+  color: #61dafb;
+}
+.product__content {
+  padding: 0px 20px;
+  padding-bottom: 15px;
+  text-align: center;
+}
+
+.product__content h6 {
+  color: #61dafb63;
+  text-align: center;
+}
+.rating span i {
+  color: #61dafbf5;
+}
+
+.rating {
+  margin-bottom: 10px;
+}
+
+.price {
+  color: #fff;
+}
+
+.price span {
+  color: #61dafb63;
+  font-size: 1.3rem;
+  font-weight: 500;
+}
+
+.shopping__icon {
+  width: 30px;
+  height: 30px;
+  border-radius: 5px;
+  background: #61dafb;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+}
+
+@keyframes animate {
+  from {
+    transform: scale(0);
   }
-  
-  .product__img:hover {
-    transform: scale(1.2);
+
+  to {
+    transform: scale(1);
   }
-  
-  .product__content h5 a {
-    color: #212245;
-    font-size: 1rem;
-  }
-  
-  .product__content h5 {
-    margin-bottom: 30px;
-  }
-  
-  .product__price {
-    font-weight: 600;
-    font-size: 1.2rem;
-    color: #df2020;
-  }
-  
-  .addTOCart__btn {
-    border: none;
-    padding: 7px 25px;
-    background: #df2020;
-    color: #fff;
-    border-radius: 5px;
+}
+
+@media only screen and (max-width: 767px) {
+  .product__content h6 {
     font-size: 0.9rem;
   }
-  
-  @media only screen and (max-width: 992px) {
-    .product__content h5 a {
-      font-size: 0.8rem;
-    }
-    .product__item {
-      padding: 20px;
-    }
-    .addTOCart__btn {
-      padding: 5px 15px;
-      font-size: 0.7rem;
-    }
+
+  .price {
+    font-size: 0.8rem;
   }
+
+  .price span {
+    font-size: 0.9rem;
+  }
+}
+
+.addTOCart__btn {
+  border: none;
+  padding: 7px 25px;
+  background: #61dafb;
+  color: #fff;
+  border-radius: 5px;
+  font-size: 0.9rem;
+}
+
+@media only screen and (max-width: 992px) {
+  .product__content h5 a {
+    font-size: 0.8rem;
+  }
+  .product__item {
+    padding: 20px;
+  }
+  .addTOCart__btn {
+    padding: 5px 15px;
+    font-size: 0.7rem;
+  }
+}
