--- a/src/styles/product-details.css
+++ b/src/styles/product-details.css
@@ -24,7 +24,7 @@
 
 .category span {
     padding: 5px 10px;
-    background: #fde4e4;
+    background: #61dafb63;
     color: #212245;
     border-radius: 5px;
     -webkit-border-radius: 5px;
@@ -34,7 +34,7 @@
 }
 
 .tabs {
-    border-bottom: 1px solid #fde4e4;
+    border-bottom: 1px solid #61dafb63;
 }
 
 .tabs h6 {
@@ -44,20 +44,19 @@
     padding: 30px 0px;
 }
 
-.tab__active {
-    color: #df2020;
-}
-
 .tab__content p {
     line-height: 30px;
     color: #212245b6;
 }
+.tab__active {
+    color: #61dafb;
+}
 
 
-.from {
+.form {
     width: 60%;
     margin: auto;
-    background: #fde4e4;
+    background: #61dafb63;
     padding: 20px;
     border-radius: 5px;
     -webkit-border-radius: 5px;
@@ -66,12 +65,12 @@
     -o-border-radius: 5px;
 }
 
-.from__group{
+.form__group{
     margin-bottom: 30px;
 }
 
-.from__group input,
-.from__group textarea {
+.form__group input,
+.form__group textarea {
     width: 100%;
     background: transparent;
     padding: 7px 20px;
@@ -79,8 +78,8 @@
     border-bottom: 1px solid #2122454c;
 }
 
-.from__group input:focus,
-.from__group textarea:focus {
+.form__group input:focus,
+.form__group textarea:focus {
     outline: none;
 }
 
