--- a/src/styles/shopping-cart.css
+++ b/src/styles/shopping-cart.css
@@ -46,7 +46,7 @@
     padding: 5px 20px;
     width: 100%;
     height: 80px;
-    background: #df2020;
+    background: #61dafb;
 }
   
 .cart__bottom h6 {
