--- a/src/styles/slider.css
+++ b/src/styles/slider.css
@@ -1,7 +1,7 @@
 .btn {
     padding: 7px 25px;
     border-radius: 5px;
-    background: #f76e11;
+    background: #61dafb;
     color: #fff;
     font-size: 0.9rem;
     margin-top: 30px;
