--- a/src/styles/footer.css
+++ b/src/styles/footer.css
@@ -83,8 +83,8 @@
 }
 
 .copyright__text {
-  font-size: 0.8rem;
-  color: #61dafb;
+  font-size: 0.9rem;
+  color: #212245;
 }
 
 @media only screen and (max-width: 992px) {
