--- a/src/styles/hero-section.css
+++ b/src/styles/hero-section.css
@@ -1,5 +1,6 @@
 .hero__content {
     padding-top: 70px;
+    background-image: url("../assets/pic/menu-bg.png");
 }
 
 .hero__title {
@@ -11,6 +12,37 @@
     color: #61dafb;
 }
 
+.hero__img-wp{
+    width: 100%;
+    height: 100%;
+    padding-left: 30px;
+} 
+
+.hero__img{
+    width: 100%;
+    height: 100%;
+    background-size: cover;
+    background-position: center;
+    animation: biani 4.5s linear infinite alternate;
+    box-shadow: 0 0px 20px rgba(36, 39, 37, 0.3);
+    -webkit-animation: biani 4.5s linear infinite alternate;
+    background-image: url("../assets/pic/bt4.jpg");
+}
+@keyframes biani {
+    0% {
+        border-radius: 48% 52% 57% 43% / 34% 44% 56% 66%;
+    }
+    25% {
+        border-radius: 62% 38% 64% 36% / 34% 55% 45% 66%;
+    }
+    50% {
+        border-radius: 43% 57% 51% 49% / 33% 42% 58% 67%;
+    }
+    100% {
+        border-radius: 40% 60% 43% 57% / 52% 32% 68% 48%;
+    }
+}
+
 .hero__content p {
     font-size: 1rem;
     line-height: 30px;
@@ -18,12 +50,29 @@
 }
 
 .hero__btns button {
-    border: none;
-    outline: none;
-    padding: 7px 20px;
-    border-radius: 5px;
+    min-width: 120px;
+    min-height: 58px;
+    background: #f3f3f5;
+    box-shadow: 9px 9px 12px #b2b2b3, -9px -9px 12px #ffffff;
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 30px;
+    color: #0d0d25;
+    text-transform: capitalize;
+    text-align: center;
+    border: 1px solid #61dafb !important;
     cursor: pointer;
-    font-weight: 600;
+    outline: none !important;
+    transition: 0.8s cubic-bezier(0.22, 0.78, 0.45, 1.02);
+    overflow: hidden;
+    position: relative;
+    z-index: 2;
+    padding: 6px 30px; 
+
+    border-color: #0d0d25;
+    box-shadow: inset 9px 9px 12px #cccccc, inset -9px -9px 12px #ffffff;
+    color: #0d0d25;
 }
 
 .order__btn {
@@ -33,15 +82,16 @@
 }
 
 .order__btn:hover {
-    background: #212245;
+    background: #61dafb;
 }
 .all__foods-btn {
     background: transparent;
     border: 1px solid #61dafb !important;
 }
-
 .all__foods-btn a {
     color: #61dafb;
+    border-color: #0d0d25;
+    color: #0d0d25;
 }
 
 .hero__service p {
@@ -50,10 +100,51 @@
     font-size: 0.9rem;
 }
 
+.about-btn{
+    text-transform: uppercase;
+    display: inline-block;
+    background: #f3f3f5;
+    box-shadow: 9px 9px 12px #e4e4e4, -9px -9px 12px #ffffff;
+    padding: 3px 20px;
+    border-radius: 60px;
+    color: #61dafb;
+    font-size: 20px;
+}
+.about__img{
+    position: relative;
+    overflow: hidden;
+    width: 200%;
+    height: 80%;
+    min-height: 400px;
+    background-size: cover;
+    background-position: center;
+    border-radius: 40px;
+    box-shadow: 0 0 20px rgb(36 39 37 / 30%);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
 .shipping__icon i {
     padding: 5px;
     background: #61dafb;
     color: #fff;
     border-radius: 50%;
     font-weight: 500 !important;
+}
+
+@media (min-width: 2100px) {
+    .about-btn{
+        font-size: 40px;
+        line-height: 60px;
+        margin-bottom: 20px;
+        background-size: 100% 10px;
+   
+    }
+
+    .about__img{
+        height: 30vw;
+        min-height: 280px;
+        border-radius: 30px;
+    }
+
 }
