--- a/src/styles/product-card.css
+++ b/src/styles/product-card.css
@@ -1,34 +1,52 @@
 .product__item {
-  /* border: 1px solid #fde4e4;
+  /*border: 1px solid #fde4e4;
   text-align: center;
   padding: 30px;
-  cursor: pointer; */
-  background: #ffffff;
+  cursor: pointer;
+  /*
+  /*background: #ffffff;
   border-radius: 10px;
   cursor: pointer;
   animation: animate 1s ease-in;
+  -webkit-animation: animate 1s ease-in; */
+  border-radius: 30px;
+  background: linear-gradient(145deg, #ececec, #ffffff);
+  box-shadow: 28px 28px 45px #d4d4d4, -28px -28px 45px #ffffff;
+  display: flow-root;
+  padding: 0 30px 40px;
+  padding-top: 0;
+  margin: 130px 0 30px;
+  transition: 0.8s cubic-bezier(0.22, 0.78, 0.45, 1.02);
 }
 .product__item:hover {
 box-shadow: 5px 5px 10px -5px #61dafb;
+transform: scale(1.03);
 }
 
-/* .product__content{
+.product__content{
   text-align: center;
   
-} */
+}
 .product__img {
   margin-bottom: 20px;
   transition: 0.4s;
   color: #fdfdfd;
   text-align: center;
+  margin-top: -100px;
+  margin-bottom: 20px;
 }
-
+.product__img img{
+  border-radius: 50%;
+  overflow: hidden;
+}
 .product__img:hover {
   transform: scale(1.1);
   -webkit-transform: scale(1.1);
   -moz-transform: scale(1.1);
   -ms-transform: scale(1.1);
   -o-transform: scale(1.1);
+  border-radius: 50%;
+  overflow: hidden;
 }
 
 .product__content h5 a {
@@ -38,6 +56,8 @@ box-shadow: 5px 5px 10px -5px #61dafb;
 
 .product__content h5 {
   margin-bottom: 30px;
+  font-weight: bold;
+  font-weight: 900;
 }
 
 .product__price {
@@ -109,12 +129,14 @@ box-shadow: 5px 5px 10px -5px #61dafb;
 }
 
 .addTOCart__btn {
+  width: 40px;
+  height: 40px;
   border: none;
-  padding: 7px 25px;
-  background: #61dafb;
-  color: #fff;
-  border-radius: 5px;
-  font-size: 0.9rem;
+  border-radius: 10px;
+  color: #ffffff;
+  transition: 0.3s;
+  background: linear-gradient(145deg, #61dafb, #61dafb);
+  box-shadow: inset 4px 4px 8px #4297af, inset -4px -4px 8px #61dafb96
 }
 
 @media only screen and (max-width: 992px) {
