--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -77,18 +77,18 @@
   
   .cart__badge {
     position: absolute;
-    top: 30px;
+    top: 18px;
     right: -10px;
-    background: #61dafb;
-    color: #fff;
-    width: 15px;
-    height: 15px;
-    border-radius: 50%;
-    font-size: 0.8rem;
-    font-weight: 500;
+    width: 22px;
+    height: 22px;
     display: flex;
-    align-items: center;
     justify-content: center;
+    align-items: center;
+    border-radius: 50%;
+    background: #ffffff;
+    font-size: 15px;
+    border: 1px solid #61dafb;
+    color: #61dafb;
   }
   
   .mobile__menu {
