--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -83,6 +83,15 @@
     border-radius: 5px;
     color: #61dafb !important;
   }
+  .section {
+    padding-top: 100px;
+    padding-bottom: 100px;
+    position: relative;
+}
+.container{
+  background-image: url("../assets/pic/menu-bg.png");
+  background-size: contain;
+}
   
   .tasty__treat-title span {
     color: #61dafb;
@@ -93,6 +102,18 @@
     line-height: 28px;
   }
   
+  .why__img{
+    position: relative;
+    overflow: hidden;
+    min-height: 400px;
+    background-size: cover;
+    background-position: center;
+    border-radius: 40px;
+    box-shadow: 0 0 20px rgb(36 39 37 / 30%);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
   .choose__us-title {
     font-weight: 600;
     margin-bottom: 10px;
