--- a/src/styles/contact.css
+++ b/src/styles/contact.css
@@ -1,8 +1,9 @@
-
 .contact .row form {
-  flex: 1 1 45rem;
-  padding: 5rem 2rem;
   text-align: center;
+  width: 30%;
+  margin: auto;
+  background: #61dafb63; 
+  padding: 20px;
 }
 
 .contact .row form h3 {
@@ -12,27 +13,33 @@
 }
   
 .contact .row form .inputBox {
-  display: flex;
+  /* display: flex;
   align-items: center;
   margin-top: 2rem;
   margin-bottom: 2rem;
   background: #ffffff;
   border: 0.1rem solid #ffffff;
-  justify-content: center;
+  justify-content: center; */
+  width: 100%;
+  background: transparent;
+  padding: 7px 20px;
+  border: none;
 }
 
 .contact .row form .inputBox span {
   color: #61dafb;
   font-size: 2rem;
-  padding-left: 2rem;
 }
 
 .contact .row form .inputBox input {
-  width: 50%;
-  background: transparent;
+  width: 100%;
   padding: 7px 25px;
   border: none;
-  border-bottom: 1px solid #fff;
   outline: none;
-
+  box-shadow: inset 9px 9px 12px #cccccc, inset -9px -9px 12px #ffffff;
+  border-radius: 10px;
+  -webkit-border-radius: 10px;
+  -moz-border-radius: 10px;
+  -ms-border-radius: 10px;
+  -o-border-radius: 10px;
 }
